Trigger job when dodns code changes

--- a/pipeline/pipeline.yml
+++ b/pipeline/pipeline.yml
@@ -28,6 +28,7 @@ jobs:
     - get: schedule
       trigger: true
     - get: dodns
+      trigger: true
 
   - task: update-dodns
     file: dodns/pipeline/tasks/update-dodns/task.yml
